<resources>
    <string name="app_name">CAR</string>
    <string name="index">首页</string>
    <string name="case_of_car">实时车况</string>
    <string name="more_content">更多内容</string>
    <string name="free">免费</string>
    <string name="commodity">商品</string>
    <string name="my">我的</string>
    <string name="system_settings">系统设置</string>
    <string name="system_notification">系统通知</string>
    <string name="bind_the_device">绑定设备</string>
    <string name="my_collection">我的收藏</string>
    <string name="browsing_history">浏览记录</string>
    <string name="shopping_cart">购物车</string>
    <string name="intent">网络</string>
    <string name="WIFI_only_under_the_network">仅WIFI下联网</string>
    <string name="no_consumption_under_the_network">2G/3G/4G网络下不耗流量</string>
    <string name="automatically_turn_on_the_Bluetooth_connection_vehicle">自动开启蓝牙连接车辆</string>
    <string name="language">语言</string>
    <string name="follow_the_system_language">跟随系统语言</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="chinese">繁体中文</string>
    <string name="english">English</string>
    <string name="about">关于</string>
    <string name="help_with_feedback">帮助与反馈</string>
    <string name="about_us">关于我们</string>
    <string name="switch_account">切换账号</string>
    <string name="settings">设置</string>
    <string name="nowCondition_string">实时车况</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
